--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@t3-oss/env-nextjs": "0.6.1",
     "@tanstack/react-query": "4.33.0",
     "axios": "1.4.0",
+    "casper-js-sdk": "2.15.2",
     "class-variance-authority": "0.7.0",
     "clsx": "2.0.0",
     "houseform": "1.11.0",
